# CompilerDesignInC

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.zig  library.h
Modules/: CMakeLists.txt
Modules/RecursiveDescent/: CMakeLists.txt
Modules/RecursiveDescent/Include/RecursiveDescent/: lex.h  name.h  parse.h
Modules/RecursiveDescent/Source/: args.c  improved.c  lex.c  main.c  name.c  plain.c  retval.c
src/: input.zig  liblex.zig  main.zig
src/liblex/: globals.zig  input.zig  nfa.zig
